Adicionando novo carro e estilizando background

--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
 <body>
     <h1>Carros em 3D</h1>
 
+    <h2>Navegue e encontre seu carro!</h2>
+
+    <p>Navegue pelo nosso site e encontre o seu carro dos sonhos,
+        nosso site possibilita uma imersão maior de compra podendo visualizar os carros em 3D
+        e em realidade aumentada.
+    </p>
+
+    <div class="box">
+        
+    </div>
+
     <model-viewer
     class="img-carro"
     ar
