Estilizando homepage e layout

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 <body>
 
     <header>
-        <h1 class="titulo">Modern Cars</h1>
+        <div class="title">
+            <div class="topLayer"></div>
+            <h1>Modern Car</h1>
+        </div>
 
         <div id="menu-mobile" class="mobile" onclick="clickMobile(), clickMenu()">
             <span></span>
@@ -34,12 +37,7 @@
         </menu>
     </header>
 
-    <h2>Navegue e encontre seu carro!</h2>
-
-    <p>Navegue pelo nosso site e encontre o seu carro dos sonhos,
-        nosso site possibilita uma imersão maior de compra podendo visualizar os carros em 3D
-        e em realidade aumentada.
-    </p>
+    <div class="homepage"></div>
 
     <h2>BMW 750i</h2>
 
@@ -111,7 +109,17 @@
     </model-viewer>
 
     <footer>
-        <p>contato:</p>
+        <ul class="listasFooter">
+            <li>Links úteis</li>
+            <li>Home</li>
+            <li>Carros</li>
+        </ul>
+
+        <ul class="listasFooter">
+            <li>contatos</li>
+            <li>github</li>
+            <li>linkedin</li>
+        </ul>
     </footer>
     
 </body>
